--- a/index.html
+++ b/index.html
@@ -7,38 +7,49 @@
   <link rel="stylesheet" href="style.css" >
   <script src="https://kit.fontawesome.com/c1df87dea1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<div>
+<div class="container">
  <h1>
-   <p> Hello, I'm Elias <p/> 
-    <img src="image/ELIAS.PNG" alt="photo de profil" height="350" width="250"> 
+
+    <div class="card-white1">
+      <p> Hello, I'm Elias <p/> 
+       </div>
+
+    <div class="card-white2">
+       <img src="image/ELIAS.PNG" alt="photo de profil" height="400" width="300"> 
+        </div>
+
+    <div class="card-white3">
     <p> I love music, basketall and food 
       <i class="fas fa-compact-disc"></i> 
       <i class="fas fa-basketball-ball"></i>
       <i class="fas fa-hamburger"></i>
       <p> 
-      <a href="https://trashtalk.co" target="_blank">Trashtalk</a>
+      </div>
+
+    <div class="card-white4">
+       <a href="https://trashtalk.co" target="_blank">Trashtalk</a>
+        </div>
   <h1/>
 </div>
 
 <div>
-  <h2> KEDGE BS
-<p> Studying L3 PGE <p>
+  <h2> Student at KEDGE BS
+<p> Studying in L3 PGE section 7 <p>
    <h2/>
 </div>
 
-  <div>
 
-  <h2> Follow me <h2/>
+ <div>
+
+  <h3> Follow me : <h3/>
     <ul>
-      <li><a href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/>Instagram</li>
-      <li><a href="https://www.facebook.com/elias.waldman" target="blank"a/>Facebook</li>
+      <li><a href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/><i class="fab fa-instagram-square"></i></li>
+      <li><a href="https://www.facebook.com/elias.waldman" target="blank"a/><i class="fab fa-facebook-square"></i></li>
 </div>
 
-  <div></div>
-
-  <div></div>
-
+  
   
 </body>
 </html>
