--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 <div class="container">
+  
  <h1>
 
     <div class="card-white1">
@@ -17,7 +18,7 @@
        </div>
 
     <div class="card-white2">
-       <img src="image/ELIAS.PNG" alt="photo de profil" height="400" width="300"> 
+       <p> Let's talk about me <p>
         </div>
 
     <div class="card-white3">
@@ -29,13 +30,14 @@
       </div>
 
     <div class="card-white4">
-       <a href="https://trashtalk.co" target="_blank">Trashtalk</a>
+      <p> One of my favourite website is : <a href="https://trashtalk.co" target="_blank">Trashtalk</a> </p>
+       
         </div>
   <h1/>
 </div>
 
-<div>
-  <h2> Student at KEDGE BS
+<div class="container2"> 
+  <h2> I am a student at KEDGE BS
 <p> Studying in L3 PGE section 7 <p>
    <h2/>
 </div>
@@ -45,8 +47,7 @@
 
   <h3> Follow me : <h3/>
     <ul>
-      <li><a href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/><i class="fab fa-instagram-square"></i></li>
-      <li><a href="https://www.facebook.com/elias.waldman" target="blank"a/><i class="fab fa-facebook-square"></i></li>
+      <li><a href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/><i class="fab fa-instagram-square"></i></li> <li><a href="https://www.facebook.com/elias.waldman" target="blank"a/><i class="fab fa-facebook-square"></i></li>
 </div>
 
   
