--- a/index.html
+++ b/index.html
@@ -42,12 +42,20 @@
    <h2/>
 </div>
 
+<div> 
+  <h3> Here you can see my <a href="file:///Users/eliaswaldman/Downloads/CV%20WALDMAN%20ELIAS.V3.pdf" target="blank">CV</a> <h3/>
 
- <div>
+</div>
 
-  <h3> Follow me : <h3/>
+<div>
+  <h4> Follow me : <h4/>
     <ul>
-      <li><a href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/><i class="fab fa-instagram-square"></i></li> <li><a href="https://www.facebook.com/elias.waldman" target="blank"a/><i class="fab fa-facebook-square"></i></li>
+        <li> <a class=lien href="https://www.instagram.com/elias__wr/?hl=fr" target="blank"a/><i class="fab fa-instagram-square"></i> </a> 
+        </li>
+
+        <li> <a class=lien href="https://www.facebook.com/elias.waldman" target="blank"a/><i class="fab fa-facebook-square"></i> </a> 
+        </li> 
+    </ul>
 </div>
 
   
